--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,53 @@
 affine==2.3.0
-astroid==2.3.2
+asn1crypto==1.2.0
+astroid==2.3.3
 attrs==19.3.0
-bitstring==3.1.6
 certifi==2019.9.11
+cffi==1.13.2
 chardet==3.0.4
 Click==7.0
 click-plugins==1.1.1
 cligj==0.5.0
-coremltools==3.0b3
+cryptography==2.8
 cycler==0.10.0
-Cython==0.29.6
-decorator==4.4.0
-Fiona==1.8.11
-geopandas==0.6.1
-graphviz==0.8.4
-h5py==2.9.0
+Cython==0.29.14
+decorator==4.4.1
+h5py==2.10.0
 idna==2.8
 isort==4.3.21
+joblib==0.14.0
 kiwisolver==1.1.0
-lazy-object-proxy==1.4.2
+lazy-object-proxy==1.4.3
 llvmlite==0.30.0
 matplotlib==3.1.1
 mccabe==0.6.1
+mkl-fft==1.0.15
+mkl-random==1.1.0
+mkl-service==2.3.0
 munch==2.5.0
-mxnet==1.5.0
 nltk==3.4.5
 nose==1.3.7
 numba==0.46.0
-numpy==1.16.2
-pandas==0.24.2
-Pillow==6.2.0
-prettytable==0.7.2
-protobuf==3.10.0
+numpy==1.17.4
+olefile==0.46
+pandas==0.25.3
+Pillow==6.2.1
+pycparser==2.19
 pylint==2.4.3
-pyparsing==2.4.2
-pyproj==2.4.1
-python-dateutil==2.8.0
+pyOpenSSL==19.0.0
+pyparsing==2.4.5
+PySocks==1.7.1
+python-dateutil==2.8.1
 pytz==2019.3
-rasterio==1.1.0
 requests==2.22.0
-resampy==0.2.1
-scikit-learn==0.20.3
+scikit-learn==0.21.3
 scikit-optimize==0.5.2
-scipy==1.2.1
-Shapely==1.6.4.post2
+scipy==1.3.2
 six==1.12.0
 snuggs==1.4.7
-tqdm==4.31.1
-turicreate==5.8
+Theano==1.0.4
+tornado==6.0.3
+tqdm==4.38.0
 typed-ast==1.4.0
-urllib3==1.25.6
+urllib3==1.25.7
 wrapt==1.11.2
